frontend hello world

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "version": "0.0.1",
   "description": "Lighthouse CI",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.15.2",
