--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "github": "^9.2.0",
+    "jsdom": "^9.12.0",
     "node-fetch": "^1.6.3"
   }
 }
