--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "OAUTH_TOKEN=`cat .oauth_token` node index.js",
-    "build": "./build.sh"
+    "start": "OAUTH_TOKEN=`cat .oauth_token` node server.js"
   },
   "engines": {
     "node": ">=7.7.0"
