--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -14,7 +14,8 @@ RUN curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - &&\
 sudo apt-get install -y nodejs
 
 # Install Xvfb and dbus for X11
-RUN apt-get install -y xvfb dbus-x11
+# Note: Uncomment if you don't want to use Headless Chrome.
+# RUN apt-get install -y xvfb dbus-x11
 
 # Install Chrome for Ubuntu
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add - &&\
@@ -26,8 +27,9 @@ sudo apt-get install -y google-chrome-stable
 # RUN apt-get install -y imagemagick
 
 # Copy key documents (except .dockerignored files)
-COPY etc/xvfb /etc/init.d/xvfb
-RUN chmod +x /etc/init.d/xvfb
+# Note: Uncomment these if you don't want to use Headless Chrome.
+# COPY etc/xvfb /etc/init.d/xvfb
+# RUN chmod +x /etc/init.d/xvfb
 
 RUN npm --global install yarn
 
