--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -21,7 +21,7 @@ sudo apt-get install -y nodejs
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add - &&\
 sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' &&\
 sudo apt-get update &&\
-sudo apt-get install -y google-chrome-stable
+sudo apt-get install -y google-chrome-unstable
 
 # Install imagemagick for tests [optional]
 # RUN apt-get install -y imagemagick
