--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,4 @@
 {
-  "version": "0.0.1",
   "private": true,
   "description": "Lighthouse CI",
   "main": "index.js",
@@ -12,6 +11,8 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.8.0",
     "express": "^4.15.2",
     "github": "^9.2.0",
     "node-fetch": "^1.6.3"
