--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "homepage": "https://github.com/ebidel/lighthouse-ci#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
+    "minimist": "^1.2.0",
+    "node-fetch": "^1.6.3"
+  },
+  "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-google": "^0.8.0"
   }
