--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "lighthouse-ci",
   "version": "0.0.2",
-  "description": "Lighthouse CI",
-  "main": "index.js",
-  "scripts": {},
+  "author": "Eric Bidelman <ebidel@>",
+  "license": "Apache-2.0",
+  "description": "Lighthouse CI Runner",
+  "main": "runlighthouse.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ebidel/lighthouse-ci.git"
   },
-  "author": "",
-  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/ebidel/lighthouse-ci/issues"
   },
