--- a/builder/Dockerfile.nonheadless
+++ b/builder/Dockerfile.nonheadless
@@ -1,72 +1,45 @@
-FROM ubuntu:latest
+FROM node:8-slim
 
 MAINTAINER Eric Bidelman <ebidel@>
-
-## PART 1: Core components
-## =======================
 
 # Install utilities
 RUN apt-get update --fix-missing && apt-get -y upgrade &&\
 apt-get install -y sudo curl wget unzip git
 
-# Install node 6
-RUN curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - &&\
+# Install node 8
+RUN curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - &&\
 sudo apt-get install -y nodejs
 
 # Install Xvfb and dbus for X11
 RUN apt-get install -y xvfb dbus-x11
 
-# Install Chrome for Ubuntu
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add - &&\
-sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' &&\
-sudo apt-get update &&\
-sudo apt-get install -y google-chrome-unstable
-
-# Install imagemagick for tests [optional]
-# RUN apt-get install -y imagemagick
+# Install latest chrome dev package.
+RUN apt-get update && apt-get install -y wget --no-install-recommends \
+    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
+    && apt-get update \
+    && apt-get install -y google-chrome-unstable \
+      --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get purge --auto-remove -y curl \
+    && rm -rf /src/*.deb
 
 # Copy key documents (except .dockerignored files)
 COPY etc/xvfb /etc/init.d/xvfb
 RUN chmod +x /etc/init.d/xvfb
 
-RUN npm --global install yarn
-
-## PART 2: Lighthouse
-## ==================
-
-# Download lighthouse from source.
-# RUN git clone https://github.com/googlechrome/lighthouse &&\
-# cd /lighthouse &&\
-# git checkout tags/1.6.5 &&\
-# yarn install &&\
-# yarn install-all &&\
-# yarn build-all
-
-# Download lighthouse from npm.
+# Download latest Lighthouse from npm.
 # cache bust so we always get the latest version of LH when building the image.
 ARG CACHEBUST=1
-RUN yarn global add lighthouse
+RUN npm i lighthouse -g
 
-## PART 3: Express server
-## ======================
-
-# Install express
+# Install express.
 COPY package.json /
-RUN yarn install
+RUN npm i
 
-# Add the simple server file
+# Add the simple server.
 COPY server.js /
 RUN chmod +x /server.js
-
-# Expose port 8080
-EXPOSE 8080
-
-## PART 4: Final setup
-## ===================
-
-# Add a user and make it a sudo user
-RUN useradd -m chromeuser &&\
-sudo adduser chromeuser sudo
 
 # Copy the chrome-user script used to start Chrome as non-root
 COPY chromeuser-script_nonheadless.sh /
@@ -75,6 +48,28 @@ RUN chmod +x /chromeuser-script_nonheadless.sh
 # Set the entrypoint
 COPY entrypoint_nonheadless.sh /
 RUN chmod +x /entrypoint_nonheadless.sh
-ENTRYPOINT ["/entrypoint_nonheadless.sh"]
 
-# CMD ["/bin/bash"]
+# # Add lhuser user.
+# RUN groupadd -r lhuser && useradd -r -g lhuser -G audio,video lhuser \
+#     && mkdir -p /home/lhuser/Downloads \
+#     && mkdir -p /home/lhuser/reports \
+#     && chown -R lhuser:lhuser /home/lhuser
+
+# Run user as non privileged.
+# USER lhuser
+
+# Add a user and make it a sudo user
+# RUN useradd -m chromeuser &&\
+# sudo adduser chromeuser sudo
+
+RUN mkdir reports
+
+EXPOSE 8080
+
+# Add a user and make it a sudo user.
+RUN useradd -m chromeuser &&\
+sudo adduser chromeuser sudo
+
+ENTRYPOINT ["./entrypoint_nonheadless.sh"]
+
+# CMD ["npm", "run", "start"]
