--- a/builder/Dockerfile.nonheadless
+++ b/builder/Dockerfile.nonheadless
@@ -2,31 +2,20 @@ FROM node:8-slim
 
 MAINTAINER Eric Bidelman <ebidel@>
 
-# Install utilities
-RUN apt-get update --fix-missing && apt-get -y upgrade &&\
-apt-get install -y sudo curl wget unzip git
-
-# Install node 8
-RUN curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - &&\
-sudo apt-get install -y nodejs
-
-# Install Xvfb and dbus for X11
-RUN apt-get install -y xvfb dbus-x11
+# Install utilities, Xvfb and dbus for X11
+RUN apt-get update --fix-missing && apt-get -y upgrade
+RUN apt-get install -y sudo xvfb dbus-x11 --no-install-recommends
 
 # Install latest chrome dev package.
-RUN apt-get update && apt-get install -y wget --no-install-recommends \
-    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
     && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
     && apt-get update \
-    && apt-get install -y google-chrome-unstable \
-      --no-install-recommends \
+    && apt-get install -y google-chrome-unstable --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
-    && apt-get purge --auto-remove -y curl \
     && rm -rf /src/*.deb
 
-# Copy key documents (except .dockerignored files)
-COPY etc/xvfb /etc/init.d/xvfb
-RUN chmod +x /etc/init.d/xvfb
+ADD https://github.com/Yelp/dumb-init/releases/download/v1.2.0/dumb-init_1.2.0_amd64 /usr/local/bin/dumb-init
+RUN chmod +x /usr/local/bin/dumb-init
 
 # Download latest Lighthouse from npm.
 # cache bust so we always get the latest version of LH when building the image.
@@ -34,8 +23,8 @@ ARG CACHEBUST=1
 RUN npm i lighthouse -g
 
 # Install express.
-COPY package.json /
-RUN npm i
+COPY package.json .
+RUN npm i --production
 
 # Add the simple server.
 COPY server.js /
@@ -49,14 +38,20 @@ RUN chmod +x /chromeuser-script_nonheadless.sh
 COPY entrypoint_nonheadless.sh /
 RUN chmod +x /entrypoint_nonheadless.sh
 
-RUN mkdir reports
+# Add a user and make it a sudo user.
+RUN groupadd -r chrome && useradd -r -m -g chrome -G audio,video chrome && \
+    mkdir -p /home/chrome/reports && \
+    chown -R chrome:chrome /home/chrome && \
+    sudo adduser chrome sudo
+
+# Disable Lighthouse error reporting to prevent prompt.
+ENV CI=true
 
 EXPOSE 8080
 
-# Add a user and make it a sudo user.
-RUN useradd -m chromeuser &&\
-sudo adduser chromeuser sudo
+ENTRYPOINT ["dumb-init", "--", "/entrypoint_nonheadless.sh"]
+#ENTRYPOINT ["dumb-init", "--"]
 
-ENTRYPOINT ["./entrypoint_nonheadless.sh"]
-
-# CMD ["npm", "run", "start"]
+#CMD ["/entrypoint_nonheadless.sh"]
+#CMD ["/bin/bash"]
+#CMD ["node", "server.js"]
