--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "Apache-2.0",
   "description": "Lighthouse CI Runner",
   "main": "runlighthouse.js",
+  "bin": {
+    "lighthouse-ci": "node runlighthouse.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ebidel/lighthouse-ci.git"
