remove entrypoint so that it can be used in CLI mode for our lighthouse in CI

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -48,5 +48,5 @@ ENV CI=true
 
 EXPOSE 8080
 
-ENTRYPOINT ["dumb-init", "--", "/entrypoint.sh"]
-#CMD ["lighthouse", "--help"]
+#ENTRYPOINT ["dumb-init", "--", "/entrypoint.sh"]
+CMD ["lighthouse", "--help"]
