Add support for reading git data from current repo

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "minimist": "^1.2.0",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "parse-git-config": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^5.6.1",
