package.json: lighthousebot rename

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "lighthouse-ci",
-  "version": "0.1.0",
+  "name": "lighthousebot",
+  "version": "0.2.0",
   "author": "Eric Bidelman <ebidel@>",
   "license": "Apache-2.0",
-  "description": "Lighthouse CI Runner",
+  "description": "Lighthouse Bot (CI) Runner",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ebidel/lighthouse-ci.git"
+    "url": "git+https://github.com/ebidel/lighthousebot.git"
   },
   "bugs": {
-    "url": "https://github.com/ebidel/lighthouse-ci/issues"
+    "url": "https://github.com/ebidel/lighthousebot/issues"
   },
-  "homepage": "https://github.com/ebidel/lighthouse-ci#readme",
+  "homepage": "https://github.com/ebidel/lighthousebot#readme",
   "main": "runlighthouse.js",
   "bin": {
-    "lighthouse-ci": "runlighthouse.js"
+    "lighthousebot": "runlighthouse.js"
   },
   "scripts": {
     "deploy": "./deploy.sh"
